feat(api): implement load bookmark (http fetch, extract and chunking)
